--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@quixo3/prisma-session-store": "^3.1.13",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
-    "prisma": "^6.1.0"
+    "passport": "^0.7.0",
+    "passport-kakao": "^1.0.1",
+    "prisma": "^6.1.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
