--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
-DATABASE_URL="mysql://root:{비밀번호}@localhost:3306/{데이터베이스이름}"
+DATABASE_URL="mysql://root:!maryong23@localhost:3306/mong"
 EXPRESS_SESSION_SECRET="secretvaluerandom"
+PASSPORT_KAKAO_CLIENT_ID = "46bb9e9b05070a0708ba26f9e88a1774"
+PASSPORT_KAKAO_CLIENT_SECRET = "CwKxTcK2mpQGL2uvw6Y7cwhZXuYFoz9T"
