--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.0.1",
     "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
+    "openai": "^4.78.1",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
     "prisma": "^6.1.0",
