--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "http-status-codes": "^2.3.0",
+    "https": "^1.0.0",
     "openai": "^4.78.1",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
+    "path": "^0.12.7",
     "prisma": "^6.1.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
